--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,11 +21,12 @@ max-width: 500px;
 		 	padding: 5% 0;
 		 	border: 2px solid white;
 		 	border-radius: 5%;
+		 	cursor: pointer;
 		 	}
-		 	a#start.button {
+		 	button#start.button {
 		 		background-color: green;
 		 	}
-		 	a#stop.button {
+		 	button#stop.button {
 		 		background-color: red;
 		 	}
 		}
@@ -46,7 +47,7 @@ max-width: 500px;
 			width: 125px;
 			margin: 5% auto;
 		}
-		a#clear.button {
+		button#clear.button {
 		text-decoration: none;
 		color: red;
 		font-weight: 700;
@@ -55,6 +56,7 @@ max-width: 500px;
 		border: 2px solid red;
 		border-radius: 5%;
 		background-color: white;
+		cursor: pointer;
 		}
 	}
 };
